2010-09-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Backporting patch r9022 from trunk by Matthew Mundell.

	* src/html/omp.xsl (result-detailed): Only show override
	details when applying overrides.

2010-09-08  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
  
	Backporting patch r8997 from trunk by Matthew Mundell.

 	* src/CMakeLists.txt: Link gsad to libexslt.
 
 	* src/gsad_base.c (xsl_transform): Register exslt extensions.
 
 	* src/html/omp.xsl (wrap): Replace with line-tokenizing version which
 	calls line-wrap.
 	(line-wrap): New template.  Copy of old wrap.

2010-09-08  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Backporting patch r8994 from trunk by Matthew Mundell.

 	* src/gsad_base.c (xsl_transform): Return NULL on error instead of HTML.
 	(gsad_message): Return basic HTML if transformation fails.
 
 	* src/gsad_oap.c (xsl_transform_oap): Try return error dialog page before
 	basic message, on transformation failure.
 
 	* src/gsad_omp.c (xsl_transform_omp): Try return error dialog page before
 	basic message, on transformation failure.
 
2010-08-26  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/html/omp.xsl: Do not show the "Pause" button if the task is
	still being requested. (Backported from trunk; initially committed in
	r8896.)

2010-08-26  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/html/omp.xsl (task): Add missing URL param name. (Backported
	from trunk; initially committed in r8767 by Matthew Mundell.)

	* ChangeLog: Corrected original revision in commit message.

2010-08-19  Matthew Mundell <matthew.mundell@greenbone.net>

	Further adjust backport of r8645 from trunk, to account for the extra
	REPORT element introduced in GET_REPORTS in trunk.

	* src/html/omp.xsl (html-report-details): Remove extra .. for new
	trunk GET_REPORTS REPORT element.

	* src/gsad_omp.c (get_report_omp): Remove extra entity_child call
	for new trunk GET_REPORTS REPORT element.
