@@ -247,6 +247,28 @@ check_modify_config (credentials_t *credentials, gnutls_session_t *session,
   return NULL;
 }
 
+/**
+ * @brief Format and send an XML string to the server.
+ *
+ * Escape XML in string and character args.
+ *
+ * @param[in]  session  Pointer to GNUTLS session.
+ * @param[in]  format   printf-style format string for message.
+ *
+ * @return 0 on success, -1 on error.
+ */
+int
+openvas_server_sendf_xml (gnutls_session_t * session, const char *format, ...)
+{
+  va_list args;
+  va_start (args, format);
+  gchar *msg = g_markup_vprintf_escaped (format, args);
+  int ret = openvas_server_send (session, msg);
+  g_free (msg);
+  va_end (args);
+  return ret;
+}
+
 
 /* Page handlers. */
 
@@ -1186,31 +1208,31 @@ create_lsc_credential_omp (credentials_t * credentials,
       /* Create the LSC credential. */
 
       if (type && strcmp (type, "gen") == 0)
-        ret = openvas_server_sendf (&session,
-                                    "<create_lsc_credential>"
-                                    "<name>%s</name>"
-                                    "%s%s%s"
-                                    "<login>%s</login>"
-                                    "</create_lsc_credential>",
-                                    name,
-                                    comment ? "<comment>" : "",
-                                    comment ? comment : "",
-                                    comment ? "</comment>" : "",
-                                    login);
+        ret = openvas_server_sendf_xml (&session,
+                                        "<create_lsc_credential>"
+                                        "<name>%s</name>"
+                                        "%s%s%s"
+                                        "<login>%s</login>"
+                                        "</create_lsc_credential>",
+                                        name,
+                                        comment ? "<comment>" : "",
+                                        comment ? comment : "",
+                                        comment ? "</comment>" : "",
+                                        login);
       else
-        ret = openvas_server_sendf (&session,
-                                    "<create_lsc_credential>"
-                                    "<name>%s</name>"
-                                    "%s%s%s"
-                                    "<login>%s</login>"
-                                    "<password>%s</password>"
-                                    "</create_lsc_credential>",
-                                    name,
-                                    comment ? "<comment>" : "",
-                                    comment ? comment : "",
-                                    comment ? "</comment>" : "",
-                                    login,
-                                    password ? password : "");
+        ret = openvas_server_sendf_xml (&session,
+                                        "<create_lsc_credential>"
+                                        "<name>%s</name>"
+                                        "%s%s%s"
+                                        "<login>%s</login>"
+                                        "<password>%s</password>"
+                                        "</create_lsc_credential>",
+                                        name,
+                                        comment ? "<comment>" : "",
+                                        comment ? comment : "",
+                                        comment ? "</comment>" : "",
+                                        login,
+                                        password ? password : "");
 
       if (ret == -1)
         {
